RESOLVED FIXED134052
MediaPlayerPrivateAVFoundationObjC::createAVAssetForURL() leaks an NSMutableArray
https://bugs.webkit.org/show_bug.cgi?id=134052
Summary MediaPlayerPrivateAVFoundationObjC::createAVAssetForURL() leaks an NSMutableA...
David Kilzer (:ddkilzer)
Reported 2014-06-18 17:17:13 PDT
WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:688:43: warning: Potential leak of an object stored into 'outOfBandTracks' NSMutableArray* outOfBandTracks = [[NSMutableArray alloc] init]; ^
Attachments
Patch v1 (4.25 KB, patch)
2014-06-18 17:26 PDT, David Kilzer (:ddkilzer)
no flags
David Kilzer (:ddkilzer)
Comment 1 2014-06-18 17:26:22 PDT
Created attachment 233344 [details] Patch v1
WebKit Commit Bot
Comment 2 2014-06-18 17:29:24 PDT
Attachment 233344 [details] did not pass style-queue: ERROR: Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:694: Missing space before { [whitespace/braces] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
David Kilzer (:ddkilzer)
Comment 3 2014-06-18 17:42:51 PDT
(In reply to comment #2) > Attachment 233344 [details] did not pass style-queue: > > > ERROR: Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:694: Missing space before { [whitespace/braces] [5] > Total errors found: 1 in 2 files > > > If any of these errors are false positives, please file a bug against check-webkit-style. Stylebot doesn't like Objective-C literal syntax.
David Kilzer (:ddkilzer)
Comment 4 2014-06-19 08:48:40 PDT
(In reply to comment #3) > (In reply to comment #2) > > Attachment 233344 [details] [details] did not pass style-queue: > > > > > > ERROR: Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:694: Missing space before { [whitespace/braces] [5] > > Total errors found: 1 in 2 files > > > > > > If any of these errors are false positives, please file a bug against check-webkit-style. > > Stylebot doesn't like Objective-C literal syntax. Filed Bug 134061: <https://bugs.webkit.org/show_bug.cgi?id=134061>
WebKit Commit Bot
Comment 5 2014-06-19 09:23:20 PDT
Comment on attachment 233344 [details] Patch v1 Clearing flags on attachment: 233344 Committed r170146: <http://trac.webkit.org/changeset/170146>
WebKit Commit Bot
Comment 6 2014-06-19 09:23:24 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.