MediaPlayerPrivateAVFoundationObjC::createAVAssetForURL() leaks an NSMutableArray <http://webkit.org/b/134052>

Reviewed by Eric Carlson.

Fixes the following static analyzer warning:

    WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:688:43: warning: Potential leak of an object stored into 'outOfBandTracks'
            NSMutableArray* outOfBandTracks = [[NSMutableArray alloc] init];
                                              ^

* platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:
(WebCore::MediaPlayerPrivateAVFoundationObjC::createAVAssetForURL):
Use RetainPtr<NSMutableArray> to prevent a leak.  Use
Objective-C literals to clean up the code.


Canonical link: https://commits.webkit.org/152010@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@170146 268f45cc-cd09-0410-ab3c-d52691b4dbfc